# yt-clip

./: .gitignore  README.md  pyproject.toml
src/ytclip/: __init__.py  __main__.py  cli.py
